# operon-openhands-gates

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
eval/results/: baseline.report.json  swebench_lite_delta.json  swebench_lite_delta.md  treatment.report.json
scripts/: README.md  baseline_completed.txt  collect_results.py  dedupe_for_eval.py  generate_delta_artifact.py  instances.txt  llm.json.example  register_critic.py  run_swebench_lite.py
src/operon_openhands_gates/: __init__.py  embedders.py  stagnation_critic.py
tests/: test_collect_results.py  test_dedupe_for_eval.py  test_generate_delta_artifact.py  test_run_swebench_lite.py  test_stagnation_critic.py
