[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operon-openhands-gates"
version = "0.1.0a1"
description = "Structural reliability critics for the OpenHands Agent SDK — certified stagnation detection, backed by the Operon categorical framework."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Bogdan Banu", email = "bogdan@banu.be" },
]
keywords = [
  "openhands",
  "agents",
  "llm",
  "reliability",
  "certificates",
  "stagnation",
  "critic",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "operon-ai>=0.36.0",
  "openhands-sdk>=1.15",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/coredipper/operon-openhands-gates"
"Sibling (LangGraph)" = "https://github.com/coredipper/operon-langgraph-gates"
Documentation = "https://banu.be/operon/"
Issues = "https://github.com/coredipper/operon-openhands-gates/issues"
"Paper 4" = "https://github.com/coredipper/operon/blob/main/article/paper4/main.pdf"
"Paper 5" = "https://github.com/coredipper/operon/blob/main/article/paper5/main.pdf"

[tool.hatch.build.targets.wheel]
packages = ["src/operon_openhands_gates"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["openhands", "openhands.*", "operon_ai", "operon_ai.*"]
ignore_missing_imports = true
